add rooms ui and api
